--- a/index.html
+++ b/index.html
@@ -2,14 +2,148 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>After School Activities</title>
     <script src="lessons.js"></script>
   </head>
+  <style>
+    * {
+      font-family: arial;
+    }
+    .headerBox {
+      background-color: darkgreen;
+      padding: 10px;
+    }
+    .sitename {
+      color: ivory;
+    }
+    .prBtn {
+      background-color: yellow;
+    }
+    .prBtn:hover {
+      background-color: ivory;
+    }
+
+    .controlBox {
+      border: 2px solid darkgreen;
+      background-color: ivory;
+      border-radius: 10px;
+      padding: 20px;
+    }
+  </style>
   <body>
+    <div id="app">
+      <!-- header box -->
+      <div
+        class="headerBox d-flex justify-content-between align-items-center justify-content-lg-around mb-3"
+      >
+        <h4 class="sitename">{{sitename}}</h4>
+
+        <div class="checkoutBox">
+          <button
+            class="prBtn btn position-relative m-1"
+            v-if="canCheckout"
+            type="button"
+          >
+            Checkout
+            <span
+              class="badge bg-danger position-absolute top-0 start-100 translate-middle round-pill"
+              >{{cartCount}}</span
+            >
+          </button>
+        </div>
+      </div>
+
+      <!-- controls box  -->
+      <div
+        class="container controlBox d-flex flex-column justify-content-around align-items-center"
+      >
+        <div class="searchBox">
+          <input
+            id="inputBox"
+            type="text"
+            placeholder="Enter Search Term"
+            v-model="searchTerm"
+            @keyup="handleChange"
+          />
+        </div>
+      </div>
+    </div>
     <script type="text/javascript">
-      console.log(lessons[0]);
+      const webApp = new Vue({
+        el: "#app",
+        data: {
+          sitename: "After School Activities",
+          products: lessons,
+          searchTerm: "",
+          cart: {
+            lout: "3243",
+          },
+          showProduct: true,
+          order: {
+            firstName: "",
+            lastName: "",
+            address: "",
+            city: "",
+            zip: "",
+            state: "",
+            method: "Home Address",
+            business: "Business Address",
+            home: "Home Address",
+            gift: "Do Not Send As a Gift",
+            sendGift: "Send As a Gift",
+            dontSendGift: "Do Not Send As a Gift",
+          },
+        },
+        filters: {
+          // formats price
+          formatPrice(price) {
+            if (!parseInt(price)) {
+              throw Error("expects int or float value"); //throws error if the price valu is not an integer
+            }
+
+            return price.toLocaleString("en-US", {
+              style: "currency",
+              currency: "AED",
+              minimumFractionsDigits: 2,
+            });
+          },
+        },
+        methods: {
+          addToCart(product) {
+            this.cart.push(product);
+          },
+          showCheckout() {
+            this.showProduct = !this.showProduct; //flips the showProduct value
+          },
+          removeFromCart(product) {
+            this.cart.splice(this.cart.indexOf(product));
+          },
+          handleChange() {
+            console.log(this.searchTerm, "this is handle event");
+          },
+        },
+        computed: {
+          cartCount() {
+            return Object.values(this.cart).length;
+          },
+          canCheckout() {
+            return this.cartCount > 0;
+          },
+        },
+      });
     </script>
   </body>
 </html>
