--- a/index.html
+++ b/index.html
@@ -37,23 +37,40 @@
     }
 
     .controlBox {
-      border: 2px solid darkgreen;
-      background-color: ivory;
-      border-radius: 10px;
-      padding: 20px;
+      border-radius: 7px;
+    }
+
+    #inputBox {
+      width: 500px;
+      border-radius: 7px;
+      padding: 3px 10px;
+    }
+
+    #inputBox:focus {
+      background-color: #198754;
+      color: ivory;
+    }
+
+    .lbBtn {
+      color: yellow;
+      border: 1px solid yellow;
+    }
+    .lbBtn:checked {
+      background-color: yellow;
+      color: black;
     }
   </style>
   <body>
     <div id="app">
       <!-- header box -->
       <div
-        class="headerBox d-flex justify-content-between align-items-center justify-content-lg-around mb-3"
+        class="bg-success p-2 d-flex justify-content-between align-items-center justify-content-lg-around mb-3"
       >
         <h4 class="sitename">{{sitename}}</h4>
 
         <div class="checkoutBox">
           <button
-            class="prBtn btn position-relative m-1"
+            class="btn-warning btn position-relative m-1"
             v-if="canCheckout"
             type="button"
           >
@@ -68,9 +85,9 @@
 
       <!-- controls box  -->
       <div
-        class="container controlBox d-flex flex-column justify-content-around align-items-center"
+        class="container p-4 bg-light controlBox d-flex flex-column flex-lg-row justify-content-around align-items-center"
       >
-        <div class="searchBox">
+        <div class="searchBox d-flex">
           <input
             id="inputBox"
             type="text"
@@ -78,6 +95,88 @@
             v-model="searchTerm"
             @keyup="handleChange"
           />
+        </div>
+
+        <div class="toolBox">
+          <!-- sort section  -->
+          <div
+            class="sortBox d-flex flex-column m-3 p-2 justify-content-between"
+          >
+            <div class="btn-group" role="group">
+              <input
+                class="btn-check"
+                type="radio"
+                name="attribute"
+                id="subject"
+                autocomplete="off"
+                value="subject"
+                checked
+                v-model="sortAttr"
+              />
+              <label class="btn btn-outline-success" for="subject"
+                >Subject</label
+              >
+              <input
+                class="btn-check"
+                name="attribute"
+                type="radio"
+                id="location"
+                autocomplete="off"
+                value="location"
+                v-model="sortAttr"
+              />
+              <label class="btn btn-outline-success" for="location"
+                >Location</label
+              >
+              <input
+                class="btn-check"
+                name="attribute"
+                type="radio"
+                id="price"
+                value="price"
+                v-model="sortAttr"
+                autocomplete="off"
+              />
+              <label class="btn btn-outline-success" for="price">Price</label>
+              <input
+                class="btn-check"
+                name="attribute"
+                type="radio"
+                id="available"
+                value="available"
+                v-model="sortAttr"
+                autocomplete="off"
+              />
+              <label class="btn btn-outline-success" for="available"
+                >Availablity</label
+              >
+            </div>
+            <div class="mt-3 p-2 btn-group" role="group">
+              <input
+                type="radio"
+                class="btn-check"
+                id="ascending"
+                value="ascending"
+                v-model="order"
+                name="order"
+                checked
+              />
+              <label class="btn-outline-success btn" for="ascending"
+                >Ascending</label
+              >
+              <input
+                type="radio"
+                class="btn-check"
+                id="descending"
+                value="descending"
+                v-model="order"
+                name="order"
+              />
+              <label class="btn-outline-success btn" for="descending"
+                >Descending</label
+              >
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -88,6 +187,8 @@
           sitename: "After School Activities",
           products: lessons,
           searchTerm: "",
+          sortAttr: "subject",
+          order: "ascending",
           cart: {
             lout: "3243",
           },
@@ -133,6 +234,8 @@
           },
           handleChange() {
             console.log(this.searchTerm, "this is handle event");
+            console.log(this.order, " >> this is the order");
+            console.log(this.sortAttr, " >> this is the sortAttr");
           },
         },
         computed: {
